# autoppia_operator

./: .env.example  .env.template  .pre-commit-config.yaml  AGENTS.md  INBOX.md  README.md  agent.py  agent_test_support.py  api.py  check.py  completion_checker.py  debugger_app.py  ecosystem.config.cjs  eval.py  experience_memory.py  fsm_operator.py  legacy_operator.py  llm_gateway.py  pricing.py  pyproject.toml  ruff.toml  sonar-project.properties
.github/: dependabot.yml
.github/scripts/: pip_audit_count.py
.github/workflows/: codeql.yml  coverage.yml  dependency-review.yml  quality-checks.yml  sonarcloud.yml
deploy/pm2/: mcp.config.cjs
docs/: mcp.md  operator_fsm.md  repo_layout.md
eval/: __init__.py  ab_test.py
infra/: llm_gateway.py  pricing.py
meta/: phase.json
models/: reward
models/bu-30b-lora/: adapter_config.json  adapter_model.safetensors  job.json  train_metrics.json
models/bu-30b-rl/: stub.json
models/verifier/: model.pt
ranker/: features.py
scripts/: README.md  build_iwap_training_dataset.py  compare_eval.py  debug_operator_run.py  deploy_check.py  export_ppo_bootstrap_from_cleaned.py  export_sft_from_cleaned.py  generate_tasks.py  run_full_eval_score_cheat.sh  run_iwa_ppo_loop.py  s3_list_task_logs.py  s3_normalize_trajectories.py  sn36_metaanchor.sh  sn36_ops.py  sn36_submit.sh  start_openai_finetune.py
scripts/eval/: analyze_model_runs.py  compare_eval.py  generate_tasks.py
scripts/sn36/: submit.sh
scripts/training/: build_iwap_training_dataset.py  export_ppo_bootstrap_from_cleaned.py  export_sft_from_cleaned.py  run_iwa_ppo_loop.py  s3_list_task_logs.py  s3_normalize_trajectories.py  start_openai_finetune.py
src/operator/: __init__.py  agent.py  entrypoint.py  server.py
src/operator/agents/: __init__.py  base.py
src/operator/agents/fsm/: __init__.py  bu_policy.py  candidates.py  engine.py  meta_tools.py  observation.py  policy.py  site_knowledge.py  state.py  utils.py
src/operator/api/: __init__.py  act_protocol.py  server.py
src/operator/runtime/: __init__.py  completion.py  fsm_adapter.py
src/operator/support/: __init__.py  iwa.py  telemetry.py  utils.py
static/debugger/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_act_contract.py  test_agent_core.py  test_agent_helpers.py  test_agent_import_and_main.py  test_api.py  test_check.py  test_eval.py  test_eval_catalog.py  test_fsm_operator.py  test_llm_gateway.py  test_pricing.py  test_scripts.py  test_training_exporters.py  test_training_iwap_module.py  test_training_models_and_s3.py
tools/: README.md  __init__.py  bittensor_tools.py  iwap_tools.py  mcp_server.py  runpod_tools.py  smtp_tools.py
training/: README.md  __init__.py  collect_trajectories.py  collector.py  dagger.py  dagger_config.py  dataset.py  deploy.py  export.py  exporters.py  finetune_bu.py  format_for_reward.py  format_for_sft.py  gpu_runner.py  iwap_client.py  models.py  normalize.py  obs_serializer.py  pipeline.py  ppo_loop.py  rl_loop.py  runpod_config.py  runpod_job.py  s3_source.py  serve_model.py  train_ranker.py  train_verifier.py
verifier/: features.py
